# mictlanx-getting-started

./: .env  .gitignore  LICENSE  README.md  add_peers.sh  mictlanx.yml  pyproject.toml  requirements.txt  run_mictlanx.sh
mictlanxbasics/: main.py
